--- a/node-rest-api/package.json
+++ b/node-rest-api/package.json
@@ -1,11 +1,13 @@
 {
 	"name": "rest-api",
 	"version": "1.0.0",
+	"engines": {
+		"node": "16.13.2"
+	},
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon index.js"
+		"start": "node index.js"
 	},
 	"author": "",
 	"license": "ISC",
